@@ -39,17 +39,27 @@
   <property name="gennorm2.src.dir" value="src/data/utr30"/>
   <property name="gennorm2.src.files" 
   	value="nfkc.txt nfkc_cf.txt BasicFoldings.txt DiacriticFolding.txt DingbatFolding.txt HanRadicalFolding.txt NativeDigitFolding.txt"/>
+  <property name="gennorm2.tmp" value="${build.dir}/gennorm2/utr30.tmp"/>
   <property name="gennorm2.dst" value="src/resources/org/apache/lucene/analysis/icu/utr30.nrm"/>
   <target name="gennorm2">
-  	<echo>Warning: only works on a big-endian platform!</echo>
+    <echo>Note that the gennorm2 and icupkg tools must be on your PATH. These tools
+are part of the ICU4C package. See http://site.icu-project.org/ </echo>
+    <mkdir dir="${build.dir}/gennorm2"/>
     <exec executable="gennorm2" failonerror="true">
       <arg value="-v"/>
       <arg value="-s"/>
       <arg value="${gennorm2.src.dir}"/>
-      <arg value="${gennorm2.src.files}"/>
+      <arg line="${gennorm2.src.files}"/>
       <arg value="-o"/>
+      <arg value="${gennorm2.tmp}"/>
+    </exec>
+    <!-- now convert binary file to big-endian -->
+    <exec executable="icupkg" failonerror="true">
+      <arg value="-tb"/>
+      <arg value="${gennorm2.tmp}"/>
       <arg value="${gennorm2.dst}"/>
     </exec>
+    <delete file="${gennorm2.tmp}"/>
   </target>
   
   <property name="rbbi.src.dir" location="src/data/uax29"/>
